# 2020_AI_Grand_Challenge

./: README.md
local_map/: CMakeLists.txt  package.xml
local_map/launch/: local_map.launch
local_map/src/: local_map.cpp  local_map_backup.cpp
path_manager/: CMakeLists.txt  package.xml
simulation_gazebo/: CMakeLists.txt  package.xml
simulation_gazebo/launch/: empty_world.launch  map.launch  ugv_test.launch
simulation_gazebo/models/AIGC2_Led/: model.config  model.sdf
simulation_gazebo/models/AIGC2_basket/: aigc_basket.stl  model.config  model.sdf
simulation_gazebo/models/AIGC2_box/: model.config  model.sdf
simulation_gazebo/models/AIGC2_corridor/: model.config  model.sdf
simulation_gazebo/models/AIGC2_corridor_2/: model.config  model.sdf
simulation_gazebo/models/AIGC2_grass/: model.config  model.sdf
simulation_gazebo/models/AIGC2_grass/materials/scripts/: grass.material
simulation_gazebo/models/AIGC2_ground/: model.config  model.sdf
simulation_gazebo/models/AIGC2_ground/materials/scripts/: asphalt.material
simulation_gazebo/models/AIGC2_hokuyo/: model.config  model.sdf
simulation_gazebo/models/AIGC2_landing/: model.config  model.sdf
simulation_gazebo/models/AIGC2_landing/materials/scripts/: landing.material
simulation_gazebo/models/AIGC2_net/: model.config  model.sdf
simulation_gazebo/models/AIGC2_net/materials/scripts/: tennis_net.material
simulation_gazebo/models/AIGC2_pole_10cm/: model.config  model.sdf
simulation_gazebo/models/AIGC2_pole_20cm/: model.config  model.sdf
simulation_gazebo/models/AIGC2_pole_30cm/: model.config  model.sdf
simulation_gazebo/models/AIGC2_sonar/: model.config  model.sdf
simulation_gazebo/models/AIGC2_start/: model.config  model.sdf
simulation_gazebo/models/AIGC2_start/materials/scripts/: start.material
simulation_gazebo/models/AIGC2_tree/: model.config  model.sdf
simulation_gazebo/models/AIGC2_tree/meshes/: Leaves.dae  Stem.dae  Tree1.dae  Tree4.dae
simulation_gazebo/models/AIGC2_tree_2/: model.config  model.sdf
simulation_gazebo/models/AIGC2_tree_3/: model.config  model.sdf
simulation_gazebo/models/AIGC2_tree_4/: model.config  model.sdf
simulation_gazebo/models/AIGC2_tree_5/: model.config  model.sdf
simulation_gazebo/models/AIGC2_tunnel/: AIGC_TUNNEL.stl  model.config  model.sdf
simulation_gazebo/models/AIGC2_tunnel_2/: aigc_tunnel.stl  model.config  model.sdf
simulation_gazebo/models/AIGC2_wall_10m/: model.config  model.sdf
simulation_gazebo/models/AIGC2_wall_14m/: model.config  model.sdf
simulation_gazebo/models/AIGC2_wall_17m/: model.config  model.sdf
simulation_gazebo/models/AIGC2_wall_1_5m/: model.config  model.sdf
simulation_gazebo/models/AIGC2_wall_1m/: model.config  model.sdf
simulation_gazebo/models/AIGC2_wall_20m/: model.config  model.sdf
simulation_gazebo/models/AIGC2_wall_21m/: model.config  model.sdf
simulation_gazebo/models/AIGC2_wall_25m/: model.config  model.sdf
simulation_gazebo/models/AIGC2_wall_2m/: model.config  model.sdf
simulation_gazebo/models/AIGC2_wall_30m/: model.config  model.sdf
simulation_gazebo/models/AIGC2_wall_31m/: model.config  model.sdf
simulation_gazebo/models/AIGC2_wall_36m/: model.config  model.sdf
simulation_gazebo/models/AIGC2_wall_3m/: model.config  model.sdf
simulation_gazebo/models/AIGC2_wall_4m/: model.config  model.sdf
simulation_gazebo/models/AIGC2_wall_4m/materials/scripts/: grey_wall.material
simulation_gazebo/models/AIGC2_wall_5m/: model.config  model.sdf
simulation_gazebo/models/AIGC2_wall_6m/: model.config  model.sdf
simulation_gazebo/models/AIGC2_wind_10m/: model.config  model.sdf
simulation_gazebo/models/AIGC2_wind_9m/: model.config  model.sdf
simulation_gazebo/models/AIGC2_window/: model.config  model.sdf
simulation_gazebo/models/AIGC2_window_glass/: model.config  model.sdf
simulation_gazebo/models/AIGC2_window_glass_half/: model.config  model.sdf
simulation_gazebo/models/AIGC2_window_glass_half/materials/scripts/: window.material
simulation_gazebo/models/KI_tree/: model.config  model.sdf
simulation_gazebo/models/KI_tree/materials/scripts/: KI_tree.material
simulation_gazebo/models/KI_tree/meshes/: pine_tree.dae
simulation_gazebo/models/ki_building/: model.config  model.sdf
simulation_gazebo/models/ki_building_2/: model.config  model.sdf
simulation_gazebo/models/ki_plane/: model.config  model.sdf
simulation_gazebo/models/ki_plane/materials/scripts/: grass.material
simulation_gazebo/models/lane/: model.config  model.sdf
simulation_gazebo/models/lane_50/: model.config  model.sdf
simulation_gazebo/models/lane_50/materials/scripts/: lane.material
simulation_gazebo/models/lane_cross/: model.config  model.sdf
simulation_gazebo/models/lane_cross/materials/scripts/: lane_cross.material
simulation_gazebo/models/parking_lot/: model.config  model.sdf
simulation_gazebo/models/person_standing/: model.sdf
simulation_gazebo/models/pointgrey_down/: model.config  model.sdf
simulation_gazebo/models/pointgrey_tracking/: model.config  model.sdf
simulation_gazebo/models/sidewalk/: model.config  model.sdf
simulation_gazebo/models/sidewalk/materials/scripts/: sidewalk.material
simulation_gazebo/models/target_drone/: drone.sdf  model.config
simulation_gazebo/models/teraranger_tracking/: model.config  model.sdf
simulation_gazebo/models/tracking_drone/: drone.sdf  drone.stl  mbzirc_drone.stl  model.config
simulation_gazebo/models/ugv/: model.config  model.sdf
simulation_gazebo/models/ugv/materials/scripts/: lane.material
simulation_gazebo/scripts/: run_mobility_cli.sh  run_sitl.sh  start_sim.sh
simulation_gazebo/worlds/: AIGC_2020.world  ki_arena.world  ki_arena_orig.world  ki_field.world  ugv.world
tele_operate/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
tele_operate/src/: .vision_node.cpp.swp  teleop_twist_keyboard.py
tf_listener/: CMakeLists.txt  package.xml
tf_listener/launch/: tf_listener.launch
tf_listener/src/: tf_listener.cpp  tf_listener_FG.cpp
tf_odom/: CMakeLists.txt  package.xml
ugv_project/: README.md
(+38 files in other folders)
